--- a/arden_zhan/Flask with MySQL/wall/templates/wall.html
+++ b/arden_zhan/Flask with MySQL/wall/templates/wall.html
@@ -4,41 +4,45 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>Wall - Welcome {{ first_name }}</h1>
-    <a href="/logout">Logout</a>
+    
+<div class="wrapper">
+    <div class="header">
+        <h1>Wall - Welcome {{ first_name }}</h1>
+        <a href="/logout">Logout</a>
+    </div>
 
-    <h3>Post a message</h3>
     <form class="message" action='/message' method='POST'>
         <textarea name="message"></textarea><br>
         <input type="submit" value="Post a message">
     </form>
 
-
     {% if all_messages != Null %}
         {% for message in all_messages: %}
-            <h2>{{ message['id'] }} - {{ message['first_name'] }} {{ message['last_name'] }} - {{ message['created_at'] }}</h2>
+            <h2>
+                {{ message['first_name'] }} {{ message['last_name'] }} - {{ message['created'] }}
+            </h2>
             <p class="messages">{{ message['message'] }}</p>
             
+            <div class="commentarea">
+                {% if message['comments'] != Null %}
+                    {% for comment in message['comments'] %}
+                        <h4>
+                            {{ comment['first_name']}} {{ comment['last_name'] }} - {{ comment['created'] }}
+                        </h4>
+                        <p class="comments">{{ comment['comment'] }}</p>
+                    {% endfor %}
+                {% endif %}
 
-            {% if all_comments != Null %}
-                {% for comment in all_comments: %}
-                    {% if comment['message_id'] == message['id'] %}
-                    <h4>
-                        {{ comment['first_name'] }} {{ comment['last_name'] }} - {{ comment['created_at'] }}
-                    </h4>
-                    <p class="comments">{{ comment['comment'] }}</p>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
+                <form action='/comment' method='POST'>
+                    <input type="hidden" name="message_id" value="{{ message['id'] }}">
+                    <textarea name="comment" id="comment"></textarea><br>
+                    <input type="submit" value="Post a comment">
+                </form>
+            </div>
 
-            <h4>Post a comment</h4>
-            <form action='/comment' method='POST'>
-                <input type="hidden" name="message_id" value="{{ message['id'] }}">
-                <textarea name="comment" id="comment"></textarea><br>
-                <input type="submit" value="Post a comment">
-            </form>
         {% endfor %}
     {% endif %}
+</div>
 
 </body>
 </html>
