--- a/arden_zhan/Django/Django Intro/django_app/apps/blogs_app/templates/blogs_app/index.html
+++ b/arden_zhan/Django/Django Intro/django_app/apps/blogs_app/templates/blogs_app/index.html
@@ -9,9 +9,17 @@
     <!-- Put the static files in the static folder inside your app.  Django collects files within all static folders and puts them within a single folder -->    
 </head>
 <body>
+    <p>placeholder to later display all the list of blogs</p>
+
     <h1>Hello World!</h1>
     {{email}} and {{name}}
 
-    <p>placeholder to later display all the list of blogs</p>
+    <form action="/create" method="post">
+        {% csrf_token %}
+        Blog Name: <input type='text' name='name' placeholder='blog name'>
+        Description: <textarea name='desc' placeholder='description'></textarea>
+        <input type='submit' value='submit'>
+    </form>
+
 </body>
 </html>
